[package]
name = "yarner-bib"
version = "0.1.0"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
edition = "2018"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
biblatex = "0.4.1"
regex = "1.4"
once_cell = "1.5"
linked-hash-map = "0.5.4"
toml = "0.5"
path-clean = "0.1"
pathdiff = "0.2"
yarner-lib = { git = "https://github.com/mlange-42/yarner.git", tag = "0.5.0" }
