[package]
name = "yarner-bib"
version = "0.1.2"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
readme = "README.md"
description = "A Yarner plugin for citations using a BibTeX bibliograph"
keywords = ["markdown", "literate-programming", "bibliography", "bibtex", "plugin"]
homepage = "https://github.com/mlange-42/yarner-bib/"
repository = "https://github.com/mlange-42/yarner-bib/"
license = "MIT"
edition = "2018"
exclude = [".github"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
biblatex = "0.4.1"
regex = "1.4"
once_cell = "1.5"
linked-hash-map = "0.5.4"
toml = "0.5"
path-clean = "0.1"
pathdiff = "0.2"
yarner-lib = "0.5.2"
